fix page height overflow

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -8,9 +8,9 @@
   justify-content: center;
   height: 100vh;
   min-height: -webkit-fill-available;
+  overflow: hidden;
   border: 8px solid;
   border-image: colours.$gradient 1;
-  padding: 1rem;
 
   @include screens.md {
     font-size: 1.5rem;
